package com.ejemplo.tramitacion.dominio.saga.paso5;

/** Referencia que produce el PASO5 al completarse. */
public record RefPaso5(String valor) {}
