package com.ejemplo.tramitacion.dominio.saga.paso7;

/** Referencia que produce el PASO7 al completarse. */
public record RefPaso7(String valor) {}
